src/assets/css/responsive.css
/* ... */
@media only screen and (max-width: 375px) {
    .project-item.style-two .project-content {
        padding-left: 0;
        padding-right: 0;
    }
}

@media only screen and (max-width: 479px) {
    .project-item.style-two .project-content h3 {
        font-size: 14px;
        line-height: 1.4;
    }
    .project-content .sub-title {
        font-size: 11px;
    }
}

@media only screen and (max-width: 375px) {
    .project-item.style-three .project-content {
        padding-left: 25px;
        padding-right: 25px;
    }
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
    .project-details-info {
        padding-left: 35px;
        padding-right: 35px;
    }
}

@media only screen and (max-width: 375px) {
    .project-details-info {
        padding-left: 35px;
        padding-right: 35px;
    }
}

@media only screen and (min-width: 376px) {
    .pd-info-item h5 {
        font-size: 22px;
    }
}

@media only screen and (max-width: 479px) {
    .tag-share {
        padding-left: 15px;
        padding-right: 15px;
    }
}

@media only screen and (max-width: 1199px) {
    .testimonial-item {
        padding-left: 25px;
        padding-right: 25px;
    }
}


@media only screen and (max-width: 1199px) {
    .pricing-item .pricing-header {
        padding-left: 25px;
        padding-right: 25px;
    }
}

@media only screen and (max-width: 1199px) {
    .pricing-item .pricing-header .price {
        font-size: 40px;
    }
}

@media only screen and (max-width: 375px) {
    .pricing-item .pricing-header .price {
        font-size: 35px;
    }
}

@media only screen and (max-width: 1199px) {
    .pricing-item .pricing-details {
        padding-left: 25px;
        padding-right: 25px;
    }
}

@media only screen and (max-width: 375px) {
    .pricing-item .pricing-details ul li {
        font-size: 18px;
    }
}

@media only screen and (max-width: 991px) {
    .client-logo-wrap .client-logo-item {
        width: calc(25% - 60px);
        margin-bottom: 40px;
    }
}

@media only screen and (max-width: 767px) {
    .client-logo-wrap .client-logo-item {
        width: calc(33.33% - 60px);
    }
}

@media only screen and (max-width: 375px) {
    .client-logo-wrap .client-logo-item {
        width: calc(50% - 60px);
    }
}

@media only screen and (max-width: 991px) {
    .client-logo-wrap {
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
    }
}

@media only screen and (max-width: 375px) {
    .blog-item .content h5 {
        font-size: 20px;
    }
}

@media only screen and (min-width: 768px) {
    .comment-body {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
    }
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
    .main-sidebar {
        padding-left: 20px;
        padding-right: 20px;
    }
}

@media only screen and (max-width: 375px) {
    .main-sidebar {
        padding-left: 25px;
        padding-right: 25px;
    }
}

@media only screen and (max-width: 1199px) {
    .widget-recent-news ul li .image {
        margin-right: 20px;
    }
}

@media only screen and (max-width: 375px) {
    .widget-recent-news ul li h5 {
        font-size: 16px;
    }
}

@media only screen and (max-width: 375px) {
    .cta-widget {
        padding-left: 25px;
        padding-right: 25px;
    }
}

@media only screen and (min-width: 992px) {
    .widget_nav_menu {
        margin-left: auto;
        margin-right: auto;
        max-width: -webkit-max-content;
        max-width: -moz-max-content;
        max-width: max-content;
    }
}

@media only screen and (min-width: 1200px) {
    .main-header .container-fluid {
        padding-left: 55px;
        padding-right: 55px;
    }
}

@media only screen and (max-width: 991px) {
    .nav-outer {
        width: 100%;
    }
}

@media only screen and (max-width: 991px) {
    .main-menu .navbar-collapse li ul li {
        padding: 0 15px;
    }
}

/* Footer Fixes for Mobile Layout (Like PC Mode) */
@media only screen and (min-width: 768px) {
    .footer-copy-text {
        font-size: 14px !important;
    }
}

@media only screen and (max-width: 767px) {
    .cert-badge {
        padding: 4px 10px !important;
        border-radius: 50px !important;
    }
    .cert-icon {
        width: 12px;
        height: 12px;
    }
    .cert-name {
        font-size: 10px !important;
        font-weight: 500 !important;
        line-height: 1.2 !important;
    }
    .cert-issuer {
        font-size: 8px !important;
        line-height: 1 !important;
    }
    .payment-icon-svg {
        width: 20px !important;
        height: 20px !important;
    }
    .payment-text {
        font-size: 10px !important;
    }
    .footer-heading {
        font-size: 11px !important;
    }
    .footer-copy-text {
        font-size: 10px !important;
    }
    
    /* Ensure footer fits side by side better */
    .footer-bottom-row .col-12 {
        padding-left: 10px;
        padding-right: 10px;
    }
    
    /* Force justify-between behavior even on small screens for the copyright */
    .footer-bottom-row .d-flex {
        flex-direction: row !important; 
    }
}

